tests/pass/PlusAssign.java
package pass;

public class PlusAssign {

	public int plusAssign(int x, int y) {
		int t = x;
		t += y;
		return t;
	}
	
	public double plusAssignD(double x, double y) {
		double t = x;
		t += y;
		return t;
	}
}
