tests/fail/ForLoops.java
package pass;

public class ForLoops {

    public static void main() {
        int[] array = new int[5];
        array[0] = 5;
        for(double i : array) {

        }
    }
}